# platformer-cpp

./: .clang-format  .gitignore  Doxyfile  LICENSE  README.md  manager.sh  meson.build
profiler/: htop-1.html  htop-10.html  htop-11.html  htop-12.html  htop-13.html  htop-14.html  htop-15.html  htop-16.html  htop-17.html  htop-18.html  htop-19.html  htop-2.html  htop-20.html  htop-21.html  htop-3.html  htop-4.html  htop-5.html  htop-6.html  htop-7.html  htop-8.html  htop-9.html
src/: main.cpp  meson.build
src/Bindings/: API.hpp  Json.cpp  Json.hpp  Lua.cpp  Lua.hpp  meson.build
src/Containers/: Model.cpp  Model.hpp  meson.build
src/Engine/: Scene.cpp  Scene.hpp  Window.cpp  Window.hpp  meson.build
src/Graphics/: Scene.cpp  Scene.hpp  Window.cpp  Window.hpp  meson.build
src/Runtime/: main.cpp
src/Runtime/Game/: config.json
src/Traits/: NoCopy.hpp  NoMove.hpp  meson.build
test/: meson.build
test/env-test/: meson.build
